# vision-transformer-pytorch-replication

./: .gitignore  pyproject.toml  readme.md
notebooks/: experiments.ipynb
src/: train.py  utils.py
src/models/: efficientb2.py  vit.py
vision_transformer_pytorch_replication.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
